--- a/templates/table_block_form.html
+++ b/templates/table_block_form.html
@@ -1,12 +1,13 @@
-<form id="table-content-holder">
+<div id="table-content-holder">
   <span>
     <label for="row">Rows</label>
-    <input type="number" id="row" name="row" min="0" max="30" value={{table.rows}}>
+    <input type="number" id="rows" name="rows" min="0" max="30" value={{content.rows}}>
     <label for="col">Columns</label>
-    <input type="number" id="col" name="col" min="0" max="10" value={{table.columns}}>
+    <input type="number" id="columns" name="columns" min="0" max="8" value={{content.columns}}>
     <button 
-      hx-post="{% url "change_table" lesson_id=lesson.id content_block_id=id %}"
-      hx-target="next #content-block-table">
+      hx-post="{% url "update_block" lesson_id=lesson.id content_block_id=id %}"
+      hx-target="next #content-block-table"
+      hx-vars="table_number:{{number}}">
       Set Size
     </button>
   </span>
@@ -17,4 +18,4 @@
     hx-target="closest #table-content-holder">
     Remove
   </button>
-</form>
+</div>
